--- a/global.css
+++ b/global.css
@@ -6,7 +6,8 @@ body {
 }
 
 body {
-  color: #333;
+  color: #fff;
+  background-color: #000;
   margin: 0;
   padding: 8px;
   box-sizing: border-box;
